# tunax

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: run_tests.yaml  test.yaml
dev_experiments/: archive_calibration_Wagner.ipynb  benchmark_Wagner_LES.ipynb  k-epsilon_Wagner_LES.ipynb  small_stuff.ipynb  test_wagner.ipynb  tmp.ipynb
dev_experiments/benchmark_Wagner_LES/array_forcings/: compilations_apple_M3pro.npy  runtimes_apple_M3pro.npy
dev_experiments/benchmark_Wagner_LES/direct/array_forcings/: runtimes_apple_M3pro.npy
dev_experiments/benchmark_Wagner_LES/direct/jit_outside/: runtimes_apple_M3pro.npy  runtimes_apple_M3pro_jit.npy
dev_experiments/benchmark_Wagner_LES/direct/no_intermediate_outputs/: compilations_dahu.npy  compilations_tesla_V100.npy
dev_experiments/benchmark_Wagner_LES/jit_outside/: runtimes_apple_M3pro.npy
dev_experiments/benchmark_Wagner_LES/no_intermediate_outputs/: compilations_apple_M3pro.npy  runtimes_apple_M3pro.npy  runtimes_apple_M3pro_jit.npy
dev_experiments/benchmark_Wagner_LES/temporal_loop_scan/: runtimes_apple_M3pro.npy
dev_experiments/benchmark_Wagner_LES/tridiag_scan/: runtimes_apple_M3pro.npy
dev_experiments/benchmark_Wagner_LES/tunax_default/: runtimes_apple_M3pro.npy
dev_experiments/data/direct/array_forcings/: runtimes_dahu.npy  (+1 more)
dev_experiments/k-epsilon_Wagner_LES/temporal_loop_scan/: runtimes_apple_M3pro.npy  runtimes_apple_M3pro_jit.npy
dev_experiments/k-epsilon_Wagner_LES/tridiag_scan/: runtimes_apple_M3pro.npy
docs/: .readthedocs.yaml  conf.py  index.rst  requirements.txt  requirementsdddd.txt
docs/_build/html/: genindex.html  index.html  objects.inv  searchindex.js
docs/doctrees/: index.doctree
docs/doctrees/rst_files/: api.doctree  examples.doctree
docs/html/: .buildinfo  py-modindex.html  search.html  searchindex.js
docs/html/_modules/: case.html  database.html  functions.html  model.html  space.html
docs/html/_sources/: index.rst.txt
docs/html/rst_files/: examples.html  overview.html
docs/rst_files/: api.rst  examples.rst  model.rst  overview.rst
docs/rst_files/api/: case.rst  closure.rst  closures.rst  closures_registry.rst  database.rst  fitter.rst  functions.rst  model.rst  space.rst
docs/rst_files/examples/: k-epsilon_Kato-Phillips.ipynb
notebooks/: README.md  autodiff_cost.ipynb  fit_wagner.ipynb  fitting_k_eps.ipynb  k-epsilon_Kato-Phillips.ipynb  k-epsilon_Wagner_LES.ipynb  logbook.ipynb  pt
obs/les_Bruno/outdir_0005/: params.in  profiles.json
obs/les_Bruno/outdir_0006/: params.in
src/: case.py  closure.py  closures_registry.py  data.py  database.py  fitter.py  functions.py  grid.py  model.py  model_arch.py.py  opti.json  scm_equinox.py  scm_oce.py  solver.py  state.py
src/closures/: closures_registry.py  k_eps.py  k_epsilon.py  tke.py
tests/: test_space.py
tunax/: __init__.py  case.py  closure.py  closures_registry.py  database.py  fitter.py  functions.py  model.py  model2.py  space.py  state.py
tunax/closures/: k_epsilon.py  tke.py
tunax_new/: __init__.py  case.py  closure.py  closures_registry.py  database.py  fitter.py  functions.py  model.py  space.py
tunax_new/closures/: k_epsilon.py
tunax_new_case_tracable/: __init__.py  case.py  closure.py  closures_registry.py  database.py  fitter.py  model.py  space.py
tunax_new_case_tracable/closures/: __init__.py  k_epsilon.py
(+371 files in other folders)
